[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pwm"
version = "1.0.1"
description = "A terminal password manager."
authors = [
    { name="hawar", email="iaramkhzri@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "rich"
]

[project.urls]
"Homepage" = "https://github.com/ihawar/pwm"
"Repository" = "https://github.com/ihawar/pwm"
"Bug Tracker" = "https://github.com/ihawar/pwm/issues"

[project.scripts]
pwm = "pwm.main:main"
